--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Fiction'
 - !lcc 'PT'
+- GITenberg
 title: "Le legs de Caïn\r\nUn Testament — Basile Hymen — Le Paradis sur le Dniester"
 url: http://www.gutenberg.org/ebooks/16421
